# AI-Tech-Project

./: .gitignore  README.md  naivebayes.py  npplot.py  pyproject.toml  train.csv  train.ipynb  val.csv  y_test.npy
